fix: remove zoom on mobile, fix how-to icon

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -74,6 +74,7 @@
   border-radius: var(--radius);
   overflow: hidden;
   aspect-ratio: 1;
+  touch-action: manipulation;
 }
 
 .cell {
